add idghv library and demo

--- a/tests/BUILD
+++ b/tests/BUILD
@@ -1,8 +1,9 @@
 cc_test(
   name = "pie_test",
-  srcs = glob(["*.cc"]),
+  srcs = glob(["*.cc", "idghv/*.cc"]),
   deps = [
          "//lib:pie",
+         "//lib/idghv:idghv",
         "@com_google_googletest//:gtest_main",
     ],
 )
