wip: MFV cleanup

--- a/tests/BUILD
+++ b/tests/BUILD
@@ -1,9 +1,10 @@
 cc_test(
   name = "pie_test",
-  srcs = glob(["*.cc", "idghv/*.cc"]),
+  srcs = glob(["*.cc", "idghv/*.cc", "mfv/*.cc"]),
   deps = [
          "//lib:pie",
          "//lib/idghv:idghv",
+         "//lib/mfv:mfv",
         "@com_google_googletest//:gtest_main",
     ],
 )
